styled the archive latest adventures page

--- a/themes/inhabitent-theme/sass/pages/_adventure-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_adventure-page.scss
@@ -1,5 +1,13 @@
+// Single Adventure Page
+
 .single-adventure {
   .adventure-header {
+    .entry-title {
+      margin-bottom: 0;
+    }
+    h1 {
+      font-size: 2.3rem;
+    }
     div {
       text-align: left;
       max-width: 800px;
@@ -7,11 +15,53 @@
     span {
       text-transform: uppercase;
       font-family: $font__pre;
+      font-size: 1.1rem;
     }
   }
   .entry-content {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .social-buttons button {
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
+}
+
+// Archive Adventure
+.adventure-grid {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 30px;
+}
+.adventure-grid-item {
+  position: relative;
+  max-width: 49%;
+  margin-left: 10px;
+  .adventure-image{
+    background: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%,rgba(0,0,0,0.25) 100%);
+    padding: 0;
+    margin-bottom: 10px;
+
+  }
+  img {
+    z-index: -1;
+    position: relative;
+    display: block;
+  }
+  .adventure-info {
+    position: absolute;
+    top: 0;
+    padding: 20px 20px;
+    h3 a {
+      color: white;
+      font-family: $font__main;
+      font-size: 2rem;
+      font-weight: normal;
+      &:hover {
+        color: #f0e4d1;
+      }
+    }
   }
 }
