--- a/themes/inhabitent-theme/sass/layout/_header.scss
+++ b/themes/inhabitent-theme/sass/layout/_header.scss
@@ -1,9 +1,31 @@
-.site-header {
+.home .site-header, .page-template-about .site-header, .single-adventure .site-header {
   height: 50px;
   background-color: transparent;
   border-bottom: 0;
+  text-shadow: 1px 1px 2px #323232;
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  padding: 0 0 0 150px;
+  a {
+    color: white;
+    padding: 4px;
+    &:hover {
+      color: white;
+    }
+    &:visited {
+      color: white;
+      &:hover {
+        color:white;
+      }
+    }
+  }
+}
+
+.site-header {
+  height: 50px;
+  border-bottom: 0;
   position: fixed;
-  // text-shadow: 1px 1px 2px #323232;
   display: flex;
   justify-content: space-around;
   padding: 0 0 0 150px;
@@ -25,11 +47,43 @@
     }
   }
 }
-.header-bar {
+.site-header-fixed {
+  height: 50px;
+  border-bottom: 0;
+  position: fixed;
   display: flex;
-  justify-content: space-between;
-  padding: 10px 0 0 20px;
-  margin-bottom: 20px;
+  justify-content: space-around;
+  padding: 0 0 0 150px;
+  z-index: 999;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.74);
+  border-bottom: 1px solid #e1e1e1;
+  a {
+    color: $color__link;
+    padding: 4px;
+    &:hover {
+      color: $color__link-visited;
+    }
+    &:visited {
+      color: $color__link;
+      &:hover {
+        color: $color__link-visited;
+      }
+    }
+  }
+
+}
+.home .site-title, .page-template-about .site-title, .single-adventure .site-title {
+  background: url(../../images/logos/inhabitent-logo-tent-white.svg) no-repeat;
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  overflow: hidden;
+  text-indent: 100%;
+  margin: 0;
+  position: absolute;
+  top: 10px;
+  left: 150px;
 }
 .site-title {
   background: url(../../images/logos/inhabitent-logo-tent.svg) no-repeat;
@@ -42,4 +96,22 @@
   position: absolute;
   top: 10px;
   left: 150px;
+}
+.site-title-fixed {
+  background: url(../../images/logos/inhabitent-logo-tent.svg) no-repeat;
+  background-size: 50px;
+  height: 50px;
+  width: 50px;
+  overflow: hidden;
+  text-indent: 100%;
+  margin: 0;
+  position: absolute;
+  top: 10px;
+  left: 150px;
+}
+.header-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0 0 20px;
+  margin-bottom: 20px;
 }
