added sticky header to home, about and adventure single pages and the scss for the header

--- a/themes/inhabitent-theme/sass/pages/_adventure-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_adventure-page.scss
@@ -1,6 +1,6 @@
 // Single Adventure Page
 
-.single-adventure {
+.adventure-single {
   .adventure-header {
     .entry-title {
       margin-bottom: 0;
