styled the search bar

--- a/themes/inhabitent-theme/sass/base/_fonts.scss
+++ b/themes/inhabitent-theme/sass/base/_fonts.scss
@@ -29,17 +29,17 @@
 
 }
 @font-face {
-    font-family: 'Novovento Sans Web';
+    font-family: 'novocento';
     src: url('../../fonts/novocento/novocentosanswide-normal-webfont.woff2') format('woff2'),
     url('../../fonts/novocento/novocentosanswide-normal-webfont.woff') format('woff'),
     url('../../fonts/novocento/novocentosanswide-normal-webfont.svg') format('svg'),
     url('../../fonts/novocento/novocentosanswide-normal-webfont.ttf') format('ttf')url('../../fonts/novocento/novocentosanswide-normal-webfont.eot') format('eot'),;
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 
 }
 @font-face {
-    font-family: 'Novovento Sans Web';
+    font-family: 'novocento';
     src: url('../../fonts/novocento/novocentosanswide-demibold-webfont.woff2') format('woff2'),
     url('../../fonts/novocento/novocentosanswide-demibold-webfont.woff') format('woff'),
     url('../../fonts/novocento/novocentosanswide-demibold-webfont.svg') format('svg'),
