--- a/themes/inhabitent-theme/sass/abstracts/_variables.scss
+++ b/themes/inhabitent-theme/sass/abstracts/_variables.scss
@@ -23,6 +23,6 @@ $color__link-hover: #19625d;
 
 $font__main: "merriweather", serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-$font__pre: 'Novovento Sans Web', sans-serif;
+$font__pre: 'novocento', sans-serif;
 $font__line-height-body: 1.75;
 $font__line-height-pre: 1.6;
