added minor spacing changes to no results search page

--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1561,3 +1561,6 @@ a {
     color: white; }
     .search .moretag:hover:visited {
       color: white; }
+
+.search .page-content {
+  padding-top: 10px; }
