added PHP WP Query to dynamically display adventure posts on front page

--- a/themes/inhabitent-theme/sass/pages/_shop-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_shop-page.scss
@@ -12,6 +12,9 @@
     text-transform: uppercase;
     a {
       color: $color__link;
+      &:hover {
+        color: $color__link-visited;
+      }
     }
   }
 }
