--- a/themes/inhabitent-theme/sass/pages/_front-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_front-page.scss
@@ -122,6 +122,9 @@
     &:first-child {
       width: 49%;
       float: left;
+      img {
+        height: 620px;
+      }
       h3 a {
         font-size: 2.75rem;
         line-height: 1;
@@ -130,6 +133,9 @@
     &:nth-child(2) {
       width: 49%;
       float:right;
+      img {
+        height: 300px;
+      }
       h3 a {
         font-size: 2.25rem;
         line-height: 1;
@@ -139,8 +145,11 @@
       width: 24%;
       float: right;
       margin-left: 1%;
-      margin-top: 1.75%;
+      margin-top: 1.1%;
       font-size: 1rem;
+      img {
+        height: 300px;
+      }
       h3 a {
         font-size: 1.5rem;
         line-height: 1;
@@ -149,7 +158,10 @@
     &:last-child {
       width: 24%;
       float: right;
-      margin-top: 1.75%;
+      margin-top: 1.1%;
+      img {
+        height: 300px;
+      }
       h3 a {
         font-size: 1.5rem;
         line-height: 1;
@@ -157,46 +169,6 @@
     }
   }
   }
-}
-.canoe {
-  background:
-  linear-gradient(
-  rgba(0, 0, 0, 0.25),
-  rgba(0, 0, 0, 0.25)
-  ),
-  url(../../images/adventure/canoe-girl.jpg) no-repeat center center;
-  background-size: cover, cover;
-  height: 620px;
-}
-.bonfire {
-  background:
-  linear-gradient(
-  rgba(0, 0, 0, 0.25),
-  rgba(0, 0, 0, 0.25)
-  ),
-  url(../../images/adventure/beach-bonfire.jpg) no-repeat center center;
-  background-size: cover, cover;
-  height: 300px;
-}
-.hikers {
-  background:
-  linear-gradient(
-  rgba(0, 0, 0, 0.25),
-  rgba(0, 0, 0, 0.25)
-  ),
-  url(../../images/adventure/mountain-hikers.jpg) no-repeat center center;
-  background-size: cover, cover;
-  height: 300px;
-}
-.night-sky {
-  background:
-  linear-gradient(
-  rgba(0, 0, 0, 0.25),
-  rgba(0, 0, 0, 0.25)
-  ),
-  url(../../images/adventure/night-sky.jpg) no-repeat center center;
-  background-size: cover, cover;
-  height: 300px;
 }
 .story-wrap {
   position: relative;
